Bug 1764224 - Don't assert primary frame on printing docs. r=dholbert

ReplicateFixedFrames can create extra frames, but we don't particularly
care about this.

Differential Revision: https://phabricator.services.mozilla.com/D143471